--- a/register.html
+++ b/register.html
@@ -24,8 +24,8 @@
                         <input type="email" id="email" placeholder="Email">
                         <input type="password" id="password" placeholder="New Password">
 
-                        <input type="text" id="favourite_song" placeholder="The Best Song Ever">
-                        <input type="text" id="milk_before_cereal" placeholder="Milk Before Cereal? ( Yes | No )">
+                        <input type="text" id="favourite_song" placeholder="Enter Your Course">
+                        <input type="text" id="milk_before_cereal" placeholder="Enter Your College">
 
                         <div id="button_container">
                             <button onclick="register()">Register</button>
